# neulander-core

./: pyproject.toml
src/neulander_core/: __init__.py  config.py  crud.py
src/neulander_core/models/: core.py  medcat.py
src/neulander_core/schema/: core.py  medcat_schema.py
