[project]
name = "neulander-core"
version = "0.1.0"
description = "A core library for the NeuLANDER project"
readme = "README.md"
authors = [{ name = "vvcb", email = "vvcb.n1@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pydantic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
